# hu

./: .flake8  .gitignore  .justfile  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  build.py  build_hu.py  pyproject.toml  rhubarb  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: lint.yaml
docker/: Dockerfile
docs/source/: conf.py  index.rst
hw/: object_dict.py
src/hu/: __init__.py  _keyspec.py  _version.py  config.toml  dotted_dict.py  object_dict.py
src/hw/: __init__.py  object_dict.py
tests/: test_dotted_dict.py  test_hu.py  test_hw.py  test_json_hooking.py  test_object_dict.py  version.txt
