[project]
name = "hu"
version = "1.0.1a1"
description = "Helpful utility software for open source programmers"
authors = [{ name = "Steve Holden", email = "steve@holdenweb.com" }]
requires-python = "~=3.9"

[dependency-groups]
dev = [
    "tox~=3.25",
    "flake8>=5.0.4,<8",
    "pytest~=7.0",
    "pytest-cov~=3.0",
    "watchdog>=2.1.7,<3",
    "coverage>=6.4.1,<7",
    "setuptools>=75.6.0,<76",
    "ruff>=0.8.4,<0.9",
    "black>=24.10.0,<25",
]

[tool.hatch.build.targets.sdist]
include = ["src/hu"]

[tool.hatch.build.targets.wheel]
include = ["src/hu"]

#[tool.hatch.build.targets.wheel.sources]
"src/hu" = "hu"

[tool.uv.workspace]
members = ["textual_forms"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
