[project]
name = "hu"
version = "2.0.0a1"
description = "Helpful utility software for open source programmers"
authors = [{ name = "Steve Holden", email = "steve@holdenweb.com" }]
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "tox>=4.0",
    "pytest~=7.0",
    "pytest-cov~=3.0",
    "watchdog>=2.1.7,<3",
    "coverage>=6.4.1,<7",
    "setuptools>=75.6.0,<83",
    "ruff>=0.8.4,<0.9",
    "semver>=3.0.4",
]

[tool.hatch.build.targets.sdist]
include = ["src/hu"]

[tool.hatch.build.targets.wheel]
packages = ["src/hu"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Default rules (pyflakes + pycodestyle errors) plus import sorting,
# which replaces the previous reorder-python-imports pre-commit hook.
extend-select = ["I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
